# whats-llm

./: README.en.md  README.ja.md  README.md
.github/workflows/: release.yml
app/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
app/scripts/: fetch-model.sh
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/crates/build-index/: Cargo.toml
app/src-tauri/crates/build-index/src/: main.rs
app/src-tauri/crates/search-core/: Cargo.toml
app/src-tauri/crates/search-core/src/: chunk.rs  embed.rs  index.rs  lib.rs  types.rs
app/src-tauri/crates/study-core/: Cargo.toml
app/src-tauri/crates/study-core/src/: lib.rs  schedule.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/model/: SOURCE.md
app/src-tauri/resources/search-index/: SOURCE.md
app/src-tauri/src/: lib.rs
app/src/lib/: Quiz.svelte  annotations.ts  content.ts  decode.ts  lang.ts  manifest.ts  markdown.ts  quiz.ts  search.ts  semantic.ts  study.ts  toc.json  ui.json  ui.ts
app/src/lib/content/en/: ai-driven-workflow.md  ai-ml-llm-relationship.md  ai-products-overview.md  appendix-deep-reference.md  appendix-glossary.md  appendix-harness.md  appendix-prompts.md  attention-and-transformer.md  claude-code-codex-workflow.md  claude-code-handson.md  codex-handson.md  coding-agent-intro.md  content-review-and-responsibility.md  cost-quota-context.md  diff-test-rollback-review.md  failure-modes-and-rescue.md  first-serious-conversation.md  hallucination-knowledge-memory.md  how-to-use-this-book.md  learning-and-research.md  local-models-ollama.md  long-text-and-summary.md  model-product-api-agent.md  multi-turn-and-context.md  next-token-prediction.md  permissions-and-rollback.md  plan-first-task-breakdown.md  privacy-and-data-tiers.md  project-agent-console.md  project-connect-api.md  project-doc-note-tool.md  project-meeting-notes.md  project-personal-website.md  project-skills-mcp.md  prompt-structure.md  rag.md  safe-use-and-team-rules.md  skills-and-mcp.md  temperature-and-reasoning.md  token-and-context.md  (+5 more)
app/src/lib/content/ja/: ai-driven-workflow.md  ai-ml-llm-relationship.md  ai-products-overview.md  appendix-deep-reference.md  appendix-glossary.md  appendix-harness.md  appendix-prompts.md  attention-and-transformer.md  claude-code-codex-workflow.md  claude-code-handson.md  codex-handson.md  coding-agent-intro.md  content-review-and-responsibility.md  cost-quota-context.md  diff-test-rollback-review.md  failure-modes-and-rescue.md  first-serious-conversation.md  hallucination-knowledge-memory.md  how-to-use-this-book.md  learning-and-research.md  local-models-ollama.md  long-text-and-summary.md  model-product-api-agent.md  multi-turn-and-context.md  next-token-prediction.md  rag.md  (+19 more)
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/progress/: +page.svelte
app/src/routes/review/: +page.svelte
(+47 files in other folders)
