[workspace]
members = ["crates/search-core", "crates/build-index", "crates/study-core"]

[package]
name = "whats-llm"
version = "0.1.0"
description = "What's LLM — an offline trilingual (zh/ja/en) e-book reader"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
search-core = { path = "crates/search-core", features = ["embed"] }
study-core = { path = "crates/study-core" }
