[package]
name = "build-index"
version = "0.1.0"
edition = "2021"
description = "Offline tool: chunk and embed the book into per-language search indices"

[[bin]]
name = "build-index"
path = "src/main.rs"

[dependencies]
search-core = { path = "../search-core", features = ["embed"] }
serde_json = "1"
anyhow = "1"
