[package]
name = "search-core"
version = "0.1.0"
edition = "2021"
description = "Reusable semantic-search core for What's LLM (chunking, index, cosine ranking, embedding)"

[lib]
name = "search_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Embedding inference (EmbeddingGemma via ONNX Runtime) is optional so the pure
# logic builds and unit-tests without pulling the heavy ONNX stack. We load model
# files locally, so hf-hub / image models are turned off; rustls avoids a system
# OpenSSL dependency for the build-time ONNX Runtime download.
fastembed = { version = "5", optional = true, default-features = false, features = [
    "ort-download-binaries-rustls-tls",
] }
anyhow = { version = "1", optional = true }

[features]
embed = ["dep:fastembed", "dep:anyhow"]
